--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             <h3>TabNews</h3>
             <p>Produzo conteúdo no TabNews, conteúdos para quem trabalha com Programação e Tecnologia. <a href="https://www.tabnews.com.br/pedromclaro" target="_blank" class="cardlink">Saiba mais</a><p>
         </div>
-    </section>  
+    </section>
+    <footer>
+        <p style="font-family: 'Red Hat Display', sans-serif; text-align: center; font-weight: 600; padding: 20px;">Versão Protótipo. Veja a <a href="https://pedromclaro.github.io/site-pessoal" class="cardlink">versão anterior</a></p>
+    </footer> 
 </body>
 
 <script src="https://kit.fontawesome.com/28b7647d54.js" crossorigin="anonymous"></script>
