--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </section>
     <footer>
-        <p style="font-family: 'Red Hat Display', sans-serif; text-align: center; font-weight: 600; padding: 20px;">Versão Protótipo. Veja a <a href="https://pedromclaro.github.io/site-pessoal" class="cardlink">versão anterior</a></p>
+        <p style="font-family: 'Red Hat Display', sans-serif; text-align: center; font-weight: 600; padding: 20px;">Protótipo. Veja a <a href="https://pedromclaro.github.io/site-pessoal" class="cardlink">versão anterior</a></p>
     </footer> 
 </body>
 
