--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="cards"">
             <h3>Menthor.io</h3>
-            <p>Plataforma gratuita de ensino de programação, onde atualmente sou instrutor e junto com pessoas incríveis estou montando um curso de Linux. <a href="https://menthor.io" target="_blank" class="cardlink">Saiba mais</a></p>
+            <p>Plataforma gratuita de ensino de programação, onde atualmente sou instrutor e junto com pessoas incríveis estou criando um curso de Linux. <a href="https://menthor.io" target="_blank" class="cardlink">Saiba mais</a></p>
         </div>
 
         <div class="cards">
