Ajustes nos cards e na section "sobre"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <a href="https://blog.pedromclaro.com"><i class="fa-brands fa-blogger" style="color: rgb(95, 95, 95)"></i></a>
             </div>
         </section>
+        <div id="sobre">
+            <p>Instrutor de Linux e técnico de informática com mais de 1 ano de experiência</p>
+        </div>
 
     </main>
     <section id="projetos">
@@ -28,7 +31,7 @@
 
         <div class="cards">
             <h3>Linux Park</h3>
-            <p>Um projeto que promove o Linux através de conteúdos didáticos. O público-alvo do projeto são pessoas que querem aprender para fins profissionais e educacionais. <a href="https://www.tabnews.com.br/pedromclaro/welcome-to-linux-park" target="_blank" class="cardlink">Saiba mais</a></p>
+            <p>Um projeto que promove o Linux através de conteúdos didáticos para pessoas que querem aprender para fins profissionais e educacionais. <a href="https://www.tabnews.com.br/pedromclaro/welcome-to-linux-park" target="_blank" class="cardlink">Saiba mais</a></p>
         </div>
 
         <div class="cards">
