Ajustes no Layout

--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro Afonso</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
     <main>
         <section id="principal">
-            <h1>Oi 👋 eu sou o Pedro Afonso</h1>
-            <h2>Técnico de Informática</h2>
-            <div id="contato">
-                <a href="https://github.com/pedromclaro" target="_blank"><i class="fa-brands fa-square-github" style="color: rgb(75, 71, 71)"></i></a>
-                <a href="https://www.linkedin.com/in/pedroafonsomclaro/" target="_blank"><i class="fa-brands fa-linkedin" style="color: rgb(75, 71, 71)"></i></a>
-                <a href="https://blog.pedromclaro.com"><i class="fa-brands fa-blogger" style="color: rgb(75, 71, 71)"></i></a>
+            <div id="texto-links">
+                <h1>Pedro Afonso</h1>
+                <h2>Técnico de Informática</h2>
+                <div id="contato">
+                    <a href="https://github.com/pedromclaro" target="_blank"><i class="fa-brands fa-square-github" style="color: rgb(75, 71, 71)"></i></a>
+                    <a href="https://www.linkedin.com/in/pedroafonsomclaro/" target="_blank"><i class="fa-brands fa-linkedin" style="color: rgb(75, 71, 71)"></i></a>
+                    <a href="https://blog.pedromclaro.com"><i class="fa-brands fa-blogger" style="color: rgb(75, 71, 71)"></i></a>
+                </div>
+                <p id="sobre">Instrutor de Linux e técnico de informática com mais de 1 ano de experiência</p>
+                <a href="#projetos">
+                    <span class="material-symbols-outlined">
+                        expand_more
+                    </span>
+                </a>
             </div>
         </section>
-        <div id="sobre">
-            <p>Instrutor de Linux e técnico de informática com mais de 1 ano de experiência</p>
-        </div>
     </main>
     <section id="projetos">
 
